Fixed alignment of footer button

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
-body {
+body{
     background-color: white;
     background-image: url('files/bg.jpg');
+}
+
+#body {
     display: grid;
     grid-template-rows: 20% 40%;
     margin-left: 40%;
@@ -90,7 +93,7 @@ body {
 }
 
 @media screen and (max-width: 1100px) {
-    body{
+    #body{
       margin-left: 0;
       margin-top: 0;
     }
@@ -108,15 +111,11 @@ body {
 
 #footer-container{
   display: flex;
-  justify-content: left;
+  justify-content: center;
 }
 
 footer {
-  margin-left: 8%;
-  position : absolute;
-  bottom : 5px;
-  height : fit-content;
-  font-size: 23px;
-  padding: 1px;
+  position: relative;
+  bottom: -32px;
 }
 
